update controller unit tests